--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     }
   },
   "routes": [
-    { "src": "/(.*)",  "dest": "/api/index.php" },
-    { "src": "/pg/(.*)",  "dest": "/api/pg/index.php" }
+    { "src": "/pg/(.*)",  "dest": "/api/pg/index.php" },
+    { "src": "/(.*)",  "dest": "/api/index.php" }
   ]
 }
