--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     }
   },
   "routes": [
-    { "src": "/pg/(.*)",  "dest": "/api/pg/index.php" },
+    { "src": "/pg/(.*)",  "dest": "/api/pgsql.php" },
     { "src": "/(.*)",  "dest": "/api/$1" }
   ]
 }
